--- a/COIL_DRIVER_STM32.ioc
+++ b/COIL_DRIVER_STM32.ioc
@@ -111,42 +111,41 @@ Mcu.Pin10=PA7
 Mcu.Pin11=PC4
 Mcu.Pin12=PB0
 Mcu.Pin13=PB1
-Mcu.Pin14=PB10
-Mcu.Pin15=PB11
-Mcu.Pin16=PB14
-Mcu.Pin17=PB15
-Mcu.Pin18=PA8
-Mcu.Pin19=PA9
+Mcu.Pin14=PB11
+Mcu.Pin15=PB14
+Mcu.Pin16=PB15
+Mcu.Pin17=PA8
+Mcu.Pin18=PA9
+Mcu.Pin19=PA11
 Mcu.Pin2=PF1-OSC_OUT
-Mcu.Pin20=PA11
-Mcu.Pin21=PA12
-Mcu.Pin22=PA13
-Mcu.Pin23=PA14
-Mcu.Pin24=PA15
-Mcu.Pin25=PC10
-Mcu.Pin26=PC11
-Mcu.Pin27=PB3
-Mcu.Pin28=PB4
-Mcu.Pin29=PB5
+Mcu.Pin20=PA12
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=PA15
+Mcu.Pin24=PC10
+Mcu.Pin25=PC11
+Mcu.Pin26=PB3
+Mcu.Pin27=PB4
+Mcu.Pin28=PB5
+Mcu.Pin29=PB6
 Mcu.Pin3=PA0
-Mcu.Pin30=PB6
-Mcu.Pin31=PB7
-Mcu.Pin32=PB8-BOOT0
-Mcu.Pin33=PB9
-Mcu.Pin34=VP_SYS_VS_Systick
-Mcu.Pin35=VP_SYS_VS_DBSignals
-Mcu.Pin36=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin37=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin38=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin39=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin30=PB7
+Mcu.Pin31=PB8-BOOT0
+Mcu.Pin32=PB9
+Mcu.Pin33=VP_SYS_VS_Systick
+Mcu.Pin34=VP_SYS_VS_DBSignals
+Mcu.Pin35=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin39=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PA1
-Mcu.Pin40=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=41
+Mcu.PinsNb=40
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431CBUx
@@ -193,7 +192,7 @@ PA14.Signal=SYS_JTCK-SWCLK
 PA15.Mode=JTAG_5_pins
 PA15.Signal=SYS_JTDI
 PA2.Locked=true
-PA2.Signal=EVENTOUT
+PA2.Signal=S_TIM2_CH3
 PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=MOS4
 PA3.Locked=true
@@ -217,7 +216,6 @@ PB0.Mode=PWM Generation2 CH2N
 PB0.Signal=TIM1_CH2N
 PB1.Locked=true
 PB1.Signal=GPIO_Output
-PB10.Signal=S_TIM2_CH3
 PB11.Locked=true
 PB11.Signal=GPIO_Input
 PB14.GPIOParameters=GPIO_Label
@@ -292,7 +290,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_USB_Device_Init-USB_DEVICE-false-HAL-false,11-MX_TIM6_Init-TIM6-false-HAL-true,12-MX_TIM7_Init-TIM7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_USB_Device_Init-USB_DEVICE-false-HAL-false,11-MX_TIM6_Init-TIM6-false-HAL-true,12-MX_TIM7_Init-TIM7-false-HAL-true,13-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADC12Freq_Value=80000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -370,7 +368,7 @@ TIM1.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM1.TIM_MasterOutputTrigger2=TIM_TRGO2_UPDATE
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV1
-TIM2.IPParameters=Channel-PWM Generation3 CH3,Prescaler,PeriodNoDither,PulseNoDither_3,TIM_MasterSlaveMode,ClockDivision
+TIM2.IPParameters=Prescaler,PeriodNoDither,PulseNoDither_3,TIM_MasterSlaveMode,ClockDivision,Channel-PWM Generation3 CH3
 TIM2.PeriodNoDither=500
 TIM2.Prescaler=350
 TIM2.PulseNoDither_3=450
